# vinotes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  create-vault.py  createvault.sh  dev-create-vault.py  index.md  old-todo.md  todo.md
.vinotes/: README.md  activate.sh  config.json  config.sh  dev.config.json  plugins.json  pyproject.toml
.vinotes/templates/: daily.py  example.py  fleeting.py  index.py  literature.py  manager.py  permanent.py  root.py
.vinotes/utils/: changelog.py  check-plugins.py  check-utils.py  conf.py  config_manager.py  create-note.py  create_daily_note.py  create_note.py  edit_config.py  example_command.py  example_independent.py  export-page.py  help.py  help.sh  open-daily.py  open-note.py  open_daily.py  open_note.py  open_vault.py  plug.py  quote_manager.py  reload.py  template_manager.py  tracked_files.json  update.py  update_index.py  vinotes-demo-plugin.py
.vinotes/vinotes/: help.py  main.py
